--- a/template/base.html
+++ b/template/base.html
@@ -11,7 +11,7 @@
 	<script src="https://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 
 	<!-- JS to turn a form into AJAX call -->
-	<script src="http://malsup.github.com/jquery.form.js"></script> 
+	<script src="/static/formjs/jquery.form.js"></script> 
 
 	<script src="/static/toast/jquery.toastmessage.js" type="text/javascript"></script> 
 	<LINK REL=StyleSheet HREF="/static/toast/css/jquery.toastmessage.css" TYPE="text/css" MEDIA=screen>
