--- a/template/base.html
+++ b/template/base.html
@@ -16,6 +16,10 @@
 	<script src="/static/toast/jquery.toastmessage.js" type="text/javascript"></script> 
 	<LINK REL=StyleSheet HREF="/static/toast/css/jquery.toastmessage.css" TYPE="text/css" MEDIA=screen>
 	
+	<!-- jQuery dataTable -->
+	<script type="text/javascript" src="/static/DataTables-1.9.4/media/js/jquery.dataTables.min.js"></script>
+	<LINK REL=StyleSheet HREF="/static/DataTables-1.9.4/media/css/jquery.dataTables.css" TYPE="text/css" MEDIA=screen>
+	
 	<LINK REL=StyleSheet HREF="/static/css/navigation.css" TYPE="text/css" MEDIA=screen>
 	<LINK REL=StyleSheet HREF="/static/css/screen.css" TYPE="text/css" MEDIA=screen>
 		
