--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -256,7 +256,7 @@ items to give you a starting point for your listing.
 <tr><td>
 Choose only one client
 </td><td>
-<input name="client" type="text" id="input-client-name" placeholder="eg. John Smith"/>
+<input name="client" type="email" id="input-client-name" placeholder="eg. john@example.com"/>
 </td></tr>
 
 <tr><td>
@@ -274,13 +274,13 @@ Write about the product
 <tr><td>
 Name the price
 </td><td>
-<input name="price" type="number" id="input-price" placeholder="eg. 632.99"/>
+<input name="price" type="number" id="input-price" placeholder="eg. 632.99" step="any" min="0" />
 </td></tr>
 
 <tr><td>
 Enter quantity
 </td><td>
-<input name="qty" type="number" id="input-qty" placeholder="eg. 100"/>
+<input name="qty" type="number" id="input-qty" placeholder="eg. 100" min="1" />
 </td></tr>
 </table>
 
